freeze and unfreeze utxos